1. dbus, doing communication now

--- a/dbus/server_client/CMakeLists.txt
+++ b/dbus/server_client/CMakeLists.txt
@@ -15,3 +15,4 @@ endif()
 add_executable(dbus_eg_server src/dbus_eg_server.c)
 add_executable(dbus_eg_client src/dbus_eg_client.c)
 install(TARGETS dbus_eg_server RUNTIME DESTINATION bin)
+install(TARGETS dbus_eg_client RUNTIME DESTINATION bin)
